Making dynamic port number

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -106,7 +106,7 @@ function auth() {
 					<center>
                         <%- error1 %>
                         <br>
-                        <a href="/register"> Click here to Login </a>
+                        <a href="/"> Click here to Login </a>
 
                     </center>
 				
